--- a/index.css
+++ b/index.css
@@ -3,8 +3,14 @@
 	}
 
 .menuDiv{
-	height: 500px;
+	height: 400px;
 	width: 150px;
-	border: 1px solid #000;
-	background-color:#0F0;
+	}
+	
+.logo{
+	height: 130px;
+	width: 130px;
+	margin-left:10px;
+	margin-top:10px;
+	margin-bottom:10px;
 	}
