--- a/css/style.css
+++ b/css/style.css
@@ -58,4 +58,12 @@
 	font-size: 30px;
 	color: #333;
 	}	
+.motorAnaBaslik{
+	font-size: 30px;
+	color: #333;
+	}	
+.motorAdı{
+	font-size: 20px;
+	color: #333;
+	}
 	
