--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,17 @@
 #anaDiv{
 	height: auto;
 	width: 1700px;
+	margin-right: auto;
+	margin-left: auto;
 	}
 
 #Header {
-	height: auto;
+	height: 180px;
 	width: 100%;
 }	
 
 #logo {
-	height: auto;
+	height: 180px;
 	width: 180px;
 	float: left;
 }
@@ -18,7 +20,7 @@
 #banner{
 	width: 1520px;
 	float: left;
-	height: auto;
+	height: 180px;
 	}
 	
 #icerik1Dİv{
