--- a/SpryAssets/SpryMenuBarVertical.css
+++ b/SpryAssets/SpryMenuBarVertical.css
@@ -18,7 +18,7 @@ ul.MenuBarVertical
 	list-style-type: none;
 	font-size: 100%;
 	cursor: default;
-	width: 180px;
+	width: 100%;
 }
 /* Set the active Menu Bar with this class, currently setting z-index to accomodate IE rendering bug: http://therealcrisp.xs4all.nl/meuk/IE-zindexbug.html */
 ul.MenuBarActive
