--- a/SpryAssets/SpryMenuBarVertical.css
+++ b/SpryAssets/SpryMenuBarVertical.css
@@ -36,6 +36,7 @@ ul.MenuBarVertical li
 	text-align: left;
 	cursor: pointer;
 	width: 100%;
+	background-color: #FFFFFF;
 }
 /* Submenus should appear slightly overlapping to the right (95%) and up (-5%) with a higher z-index, but they are initially off the left side of the screen (-1000em) */
 ul.MenuBarVertical ul
