8SeriesCabrio Sayfası Tamamlandı

--- a/css/araba.css
+++ b/css/araba.css
@@ -48,3 +48,21 @@
 	font-size:20px;
 	
 }
+
+.Series8CabrioBaslik{
+	font-family:arial;
+	font-size:40px;
+	
+}
+
+.Series8CabrioAltBaslik{
+	font-family:arial;
+	font-size:25px;
+	
+}
+
+.Series8CabrioAciklama{
+	font-family:arial;
+	font-size:15px;
+	
+}
