BMW7Series Sayfası Tamamlandı

--- a/css/araba.css
+++ b/css/araba.css
@@ -66,3 +66,15 @@
 	font-size:15px;
 	
 }
+
+.Series7CabrioBaslik{
+	font-family:arial;
+	font-size:40px;
+	
+}
+
+.gizliBaslik{
+	font-family:arial;
+	font-size:15px;
+	color:#aaaaaa;
+}
