Fiyat Kredi Tablosu html komutları

--- a/css/araba.css
+++ b/css/araba.css
@@ -78,3 +78,23 @@
 	font-size:15px;
 	color:#aaaaaa;
 }
+
+.fiyatBaslik{
+	
+	
+}
+
+.fiyatAcıklama{
+	
+	
+}
+
+.fiyatTabloBaslik{
+	
+	
+}
+
+.fiyatTabloAciklama{
+	
+	
+}
