--- a/css/araba.css
+++ b/css/araba.css
@@ -104,3 +104,21 @@
 	font-family:arial;
 	
 }
+.geriAciklama{
+	font-size:24px;
+	font-family:arial;
+
+}
+
+.geriBaslik{
+	font-size:28px;
+	font-family:arial;
+	
+	
+}
+.yenibaslik{
+	font-size:36px;
+	font-family:arial;
+	
+	
+}
