--- a/css/motor.css
+++ b/css/motor.css
@@ -1,33 +1,32 @@
 @charset "utf-8";
-.resimBaslik{
-	font-size: 20px;
-	font-weight: bold;
+.icerik{
+	font-size:32px;
+	font-family:arial;
 	
-}
-
-.resimAciklama{
-	
-	font-weight: bold;
 	
 }
 
 .aciklamaBaslik{
-	font-size:20px;
+	font-size:18px;
+	font-family:arial;
+	
+	
+}
+
+.araaciklama{
+	font-size:22px;
+	font-family:arial;
+	
+	
+}
+
+.resimAciklama{
+	font-weight:bold;
+	
+}
+
+.resimBaslik{
+	font-size:22px;
 	font-weight: bold;
-	
-	
-}
-
-.aciklama{
-	
-	font-family:arial;
-	font-size:17px;
-	
-}
-
-.icerik{
-	
-	font-family:arial;
-	font-size:20px;
 	
 }
