--- a/css/index.css
+++ b/css/index.css
@@ -41,3 +41,52 @@
 	border-style:solid;
 	
 }
+
+.videoAnaDiv{
+	width:98%;
+	height:auto;
+	margin-left:auto;
+	margin-right:auto;
+	position:relative;
+	
+}
+
+.videoDiv{
+	width:100%;
+	position:absolute;
+	z-index:-1;
+	
+}
+
+.videoYaziDiv{
+	width:100%;
+	height:auto;
+	margin-top:-100px;
+	
+}
+
+.videoYaziDiv h1{
+	color:#ffffff;
+	font-size:150px;
+	font-weight:bolt;
+	margin-left:15px;
+	
+}
+
+.videoYaziDiv p{
+	color:#ffffff;
+	font-size:20px;
+	font-weight:bolt;
+	margin-left:40px;
+	margin-top:-100px;
+	
+}
+
+.videoYaziDiv h3{
+	color:#ffffff;
+	font-size:70px;
+	font-weight:bolt;
+	margin-top:370px;
+	margin-left:15px;
+	
+}
