--- a/css/aksesuarlar.css
+++ b/css/aksesuarlar.css
@@ -13,8 +13,7 @@
 .dısCizgi{
 	border-style:solid;
 	border-width:1px;
-	
-	
+	height:500px;
 }
 
 .urunAdi{
@@ -24,13 +23,7 @@
 	
 }
 
-.urunFiyatİndirim{
-	font-size:17px;
-	font-family:arial;
-	text-decoration:line-through;
-	color:#aaaaaa;
-	
-}
+/* Fİyat Bilgisi */
 
 .urunFiyat h1{
 	font-size:20px;
@@ -39,6 +32,8 @@
 	float:right;
 	
 }
+
+/* İdirimli Fiyattan Önceki Fiyat */
 
 .urunFiyat h2{
 	font-size:17px;
