--- a/css/index.css
+++ b/css/index.css
@@ -42,9 +42,11 @@
 	
 }
 
+/* ana ekrandakş arkaya video gömme olayı */
+
 .videoAnaDiv{
+	height:700px;
 	width:98%;
-	height:auto;
 	margin-left:auto;
 	margin-right:auto;
 	position:relative;
@@ -53,20 +55,20 @@
 
 .videoDiv{
 	width:100%;
+	height:100%;
 	position:absolute;
 	z-index:-1;
-	
+	overflow:hidden;
 }
 
 .videoYaziDiv{
+	height:100%;
 	width:100%;
 	height:auto;
-	margin-top:-100px;
-	
 }
 
 .videoYaziDiv h1{
-	color:#ffffff;
+	color:#FFF;
 	font-size:150px;
 	font-weight:bolt;
 	margin-left:15px;
@@ -74,7 +76,7 @@
 }
 
 .videoYaziDiv p{
-	color:#ffffff;
+	color:#FFF;
 	font-size:20px;
 	font-weight:bolt;
 	margin-left:40px;
@@ -83,10 +85,9 @@
 }
 
 .videoYaziDiv h3{
-	color:#ffffff;
+	color:#FFF;
 	font-size:70px;
 	font-weight:bolt;
-	margin-top:370px;
-	margin-left:15px;
-	
+	margin-left:10px;
+	margin-top:200px;
 }
